# QCI-library

./: .gitignore  README.md  changelog.md
CMakeModules/: FindFORTRANCOMPILER.cmake  FindMYBLAS.cmake  FindMYLAPACK.cmake
docs/: Parameter_options.md  Qucik_start.md  build_deb.md
old_subs/: amber_chir_init.f90  intlbfgs.f90  sub_checkperc.f90  sub_checkrep.f90  sub_condouble.f90  sub_congrad.f90  sub_congrad2.f90  sub_congrad3.f90  sub_conpot.f90  sub_doaddatom.f90  sub_dochicheck.f90  sub_intlbfgs.f90  sub_intminonly.f90  sub_intrwg.f90  sub_intrwg2.f90  sub_make_conpot.f90  sub_makestep.f90  sub_minmaxd2.f90  sub_minmaxd2r.f90  sub_nmdalign.f90  sub_qcioptperm.f90  sub_repdouble.f90  sub_trilateration.f90  sub_writeprofile.f90
scripts/: inpcrd2start.py
source/: CMakeLists.txt  QCI_interface.F90  QCI_interface.f90  constraint_keys.f90  interpolation_keys.f90  mod_addatom.f90  mod_addremove_images.f90  mod_amber.f90  mod_check_grad.f90  mod_chirality.f90  mod_congeom.f90  mod_congrad.f90  mod_constraints.f90  mod_dih_constr.f90  mod_freeze.f90  mod_hire.f90  mod_intcoords.f90  mod_interpolation.f90  mod_linearlist.f90  mod_repulsion.f90  mod_sbm.f90  qci_keys.f90  qci_setup.f90
source/utils/: bond_crossings.f90  compare_lists.f90  file_handler.f90  helper_fncts.f90  mod_bond_crossing_detection.f90  mod_print_output.f90  mod_quaternion.f90  mod_terminate.f90  mod_timer.f90  qci_align_coords.f90  qci_permdist.f90  qciprec.f90  terminate_error.f90
standaloneQCI/: CMakeLists.txt  main.F90
testing/small_system/input/: QCIlinear  start
testing/small_system/run/: QCIreset.int.EofS  perm.allow  start.aligned
testing/small_system/run/aligned_endpoints/: finish.aligned  finish.aligned.rst  start.aligned.rst
testing/small_system/setup/finish/: coords.inpcrd  coords.prmtop  coords.prmtop.old  leap.in  start
testing/small_system/setup/start/: coords.inpcrd  coords.prmtop  coords.prmtop.old
testing/tar_gs-es/: QCIlinear  coords.inpcrd  coords.prmtop  finish  finish.aligned  perm.allow  start  start.aligned
